Added GameFeature to the project

--- a/GameFeatureCollab.uproject
+++ b/GameFeatureCollab.uproject
@@ -10,6 +10,14 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "GameFeatures",
+			"Enabled": true
+		},
+		{
+			"Name": "GameFeatureVivianBoudon",
+			"Enabled": true
 		}
 	]
 }
