--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -22,3 +22,12 @@ bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
 
+[/Script/AssetReferenceRestrictions.AssetReferencingPolicySettings]
+EnginePlugins=(DefaultRule=(CanReferenceTheseDomains=,bCanProjectAccessThesePlugins=True,bCanBeSeenByOtherDomainsWithoutDependency=True),AdditionalRules=)
+ProjectPlugins=(DefaultRule=(CanReferenceTheseDomains=("ProjectContent"),bCanProjectAccessThesePlugins=True,bCanBeSeenByOtherDomainsWithoutDependency=False),AdditionalRules=((DisplayName=NSLOCTEXT("AssetReferencingPolicy", "GameFeatureRule_DisplayName", "GameFeature:{0}"),ErrorMessageIfUsedElsewhere=NSLOCTEXT("AssetReferencingPolicy", "GameFeatureRule_ErrorMessageIfUsedElsewhere", "Game Feature content can only be accessed by other plugins that declare an explicit dependency"),PluginPathPrefix="/GameFeatures/",CanReferenceTheseDomains=("ProjectContent"))))
+DefaultProjectContentRule=(CanReferenceTheseDomains=)
+bIgnoreEditorOnlyReferences=True
+
+[/Script/GameFeatures.GameFeaturesSubsystemSettings]
+GameFeaturesManagerClassName=None
+
